<resources>
    <string name="app_name">Warranteed</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_store">Store</string>
    <string name="title_chat">Chat</string>
    <string name="title_activity_login">Warranteed</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="text_noAccount">Don\'t have an account yet?</string>
    <string name="text_forgotPass">Forgot password?</string>
    <string name="label_email">E-mail address</string>
    <string name="label_password">Password</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="cust">Customer</string>
    <string name="store_owner">Store owner</string>
    <string name="checkbox">I am a:</string>
    <string name="channel_description">Warranteed</string>
    <string name="channel_name">general_notifications</string>
    <string name="warranties">Warranties</string>
    <string name="store">CoolGreen</string>
    <string name="edit">Edit profile</string>
    <string name="start_chat">Start a chat</string>
    <string name="description_store">Description CoolGreen:</string>
    <string name="picture">Pictures CoolGreen:</string>
    <string name="information">Information CoolGreen:</string>
    <string name="shopinfo">Electronics shop based in the Netherlands</string>
    <string name="contactinfo1">example@coolgreen.com</string>
    <string name="contactinfo2">+31 6 1234 5678</string>
    <string name="contactinfo3">CoolGreenstreet 12, 0000CG Rotterdam, Netherlands</string>
    <string name="shopEmail">E-mail - %s</string>
    <string name="shopPhoneNumber">Phone number - +%s</string>
    <string name="shopAddress">Address - %s</string>
    <string name="editShopName">Name</string>
    <string name="editShopDescription">Description</string>
    <string name="editShopEmail">E-mail</string>
    <string name="editShopPhoneNumber">Phone Number</string>
    <string name="editShopStreet">Street</string>
    <string name="editShopHouseNumber">House number</string>
    <string name="editShopZipCode">Zip code</string>
    <string name="editShopCity">City</string>
    <string name="editShopProvince">Province</string>
    <string name="editShopTitle">Store information</string>
    <string name="editShopCancel">Cancel</string>
    <string name="editShopSave">Save</string>
    <string name="purchaseinfo">Your purchases at CoolGreen</string>
    <string name="linkshop">Link to the shop CoolGreen: https://www.coolblue.nl"</string>
    <string name="sample_date">01\–01\-21</string>
    <string-array name="spinner_options">
        <item> All </item>
        <item> Valid </item>
        <item> Expiring </item>
        <item> Void </item>
    </string-array>
    <string name="msgLoggedOut">You have been logged out.</string>
    <string name="msgAccountDeleted">Your account has been deleted.</string>
    <string name="msgCustomerLogin">You have successfully logged in as a customer.</string>
    <string name="msgStoreLogin">You have successfully logged in as an employee of CoolGreen.</string>
    <string name="msgWrongCredentials">The email and/or password you entered is incorrect</string>
    <string name="msgNoEmail">An email address is required.</string>
    <string name="msgNoPassword">A password is required.</string>
    <string name="hintChatMessageField">Write a message...</string>
    <string-array name="notif_options">
        <item> 7 </item>
        <item> 14 </item>
        <item> 21 </item>
        <item> 28 </item>
    </string-array>
</resources>